<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/layout_single_line" />

    <EditText
        android:id="@+id/register_first_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:background="@android:color/transparent"
        android:hint="@string/first_name"
        android:imeActionId="@+id/login"
        android:textDirection="locale"
        android:textAlignment="viewStart"
        android:fontFamily="@font/font_regular"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:visibility="invisible"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp" />

    <include layout="@layout/layout_single_line" />

    <EditText
        android:id="@+id/register_lastname"
        android:layout_width="match_parent"
        android:layout_height="@dimen/field_height"
        android:textDirection="locale"
        android:textAlignment="viewStart"
        android:fontFamily="@font/font_regular"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        android:inputType="text"
        android:hint="@string/last_name"
        android:padding="10dp" />

    <include layout="@layout/layout_single_line" />

    <Spinner
        android:id="@+id/register_gender"
        android:layout_width="match_parent"
        android:fontFamily="@font/font_regular"
        android:textDirection="locale"
        android:textAlignment="viewStart"
        android:visibility="invisible"
        android:background="@drawable/spinner_icon"
        android:layout_height="@dimen/field_height"
        android:entries="@array/business_gender" />

</LinearLayout>